# chacha20_poly1305

./: CMakeLists.txt  README.md  chacha20_poly1305.c  chacha20_poly1305.h
rfc_tests/: chacha20_poly1305_test.h  chacha20_test.c  tests.c
tests/: aead_test.c  chacha20_poly1305_test.h  chacha20_test.c  poly1305_test.c  tests.c
